--- a/index.html
+++ b/index.html
@@ -24,33 +24,25 @@
         <!-- END MOBILE SCREEN -->
 
         <ul class="list-menu">
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">WhatsApp Channel</a></li>
-            <li><a href="#">Telegram Channel</a></li>
-            <h3><a href="https://bit.ly/3CqWIgb" target="_blank" rel="noopener noreferrer">Contact</a></h3>
+           <h3><a href="https://t.me/distributorcheat" target="_blank" rel="noopener noreferrer">Telegram Channel</a></h3>
+            <h3><a href="https://whatsapp.com/channel/0029Vb5QpUB7tkjHI2T4Hj1z" target="_blank" rel="noopener noreferrer">WhatsApp Channel</a></h3>
+            <h3><a href="https://wa.me/6282164484376" target="_blank" rel="noopener noreferrer">Contact</a></h3>
         </ul>
     </header>
 
     <main>
         <div class="left">
-            <h2 class="hello-text">Welcome</h2>
+            <h2 class="hello-text">Welcome to</h2>
             <h1 class="name-text">DISTRIBUTOR GAME</h1>
             <h2 class="role-text">
-                <span>CHEAT iOS</span>
                 <span>CHEAT ANDROID</span>
+                <span>CHEAT iOS</span>
                 <span>AVAILABLE</span>
             </h2>
 
             <div class="list-button">
-                <button class="Website-List-Cheat">Website List Cheat</button>
+                <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
             </div>
-        </div>
-        
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-instagram"></i>
-            <h3><a href="https://bit.ly/3CqWIgb" target="_blank" rel="noopener noreferrer">Instagram</a></h3>
-          </div>
         </div>
         <section class="right">
             <img class="blob-img" src="blob.png">
