--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
                 <span>CHEAT iOS</span>
                 <span>AVAILABLE</span>
             </h2>
-
-            <div class="list-button">
-                <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
-            </div>
-        </div>
+        <div class="list-button">
+                <button href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</button>
         <section class="right">
             <img class="blob-img" src="blob.png">
             <img class="rocket-img" src="rocket.png">
