--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span>AVAILABLE</span>
             </h2>
         <div class="list-button">
-                <button href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</button>
+                <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
         <section class="right">
             <img class="blob-img" src="blob.png">
             <img class="rocket-img" src="rocket.png">
