--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             </h2>
         <div class="list-button">
                 <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
+            </div>
+        </div>
         <section class="right">
             <img class="blob-img" src="blob.png">
             <img class="rocket-img" src="rocket.png">
