--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </h2>
             
         <div class="list-button">
-                <button class="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</button>
+                <h3><a class="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
                 </div>
         </div>
         
