--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
             </h2>
             
         <div class="list-button">
-                <h3><a class="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
-                </div>
-        </div>
-        
+                <button class="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</button>
         <section class="right">
             <img class="blob-img" src="blob.png">
             <img class="rocket-img" src="rocket.png">
