--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                 <span>AVAILABLE</span>
             </h2>
 
-            <div class="list-button">
-                <button class="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</button>
-                </div>
-        </div>
+            <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+            <i class="bi bi-instagram"></i>
+            <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
+          </div>
+            </div>
         
         <section class="right">
             <img class="blob-img" src="blob.png">
