--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-instagram"></i>
-            <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
+            <button href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</button>
           </div>
             </div>
         
