--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <span>AVAILABLE</span>
             </h2>
 
+            <div class="list-button">
             <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-instagram"></i>
