--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </h2>
 
             <div class="list-button">
+            <button class="download-cv">Download</button>
             <h3><a href="https://lynk.id/distributorcheat" target="_blank" rel="noopener noreferrer">LIST PRICE CHEAT</a></h3>
           </div>
        </div>
